--- a/css/style-global.css
+++ b/css/style-global.css
@@ -830,7 +830,7 @@ p {
 .port .thumb-port .funtion p {
     background-color: var(--white-);
     font-weight: 100;
-    padding: 5px 10px;
+    padding: 5px;
     border-radius: 20px;
     transition: 0.3s;
 }
